# agent-arena

./: .dockerignore  .env.example  .gitignore  CRITICAL_FIXES.md  Dockerfile  Procfile  README.md  SECURITY_AUDIT_REPORT.md  nixpacks.toml  railway.toml
.claude/: settings.local.json
backend/: .env.example  Cargo.toml
backend/scripts/: demo_match.sh
backend/src/: error.rs  main.rs
backend/src/middleware/: auth.rs  rate_limit.rs
backend/src/models/: agent.rs  match_types.rs  mod.rs  trade.rs  x402.rs
backend/src/routes/: arena.rs  defi.rs  demo.rs  health.rs  leaderboard.rs  matches.rs  mod.rs  prices.rs  ws.rs
backend/src/services/: match_service.rs  mod.rs  onchainos_service.rs  oracle_service.rs  price_feed.rs  trade_engine.rs  x402_service.rs
backend/tests/: trade_engine_test.rs
contracts/: .env.example  hardhat.config.js  package-lock.json  package.json
contracts/contracts/: ArenaRegistry.sol  LeaderboardContract.sol  MatchEscrow.sol  MatchManager.sol  TournamentManager.sol
contracts/contracts/interfaces/: IIdentityRegistry.sol  IReputationRegistry.sol
contracts/contracts/mocks/: MockIdentityRegistry.sol  MockUSDC.sol
contracts/deployments/: xlayerTestnet.json
contracts/scripts/: accept-match.js  check-agents.js  check-match.js  check-stats.js  check-tiers.js  deploy-mock-identity.js  deploy.js  submit-result.js  test-full-match.js  test-testnet.js
contracts/test/: ArenaRegistry.test.js  MatchEscrow.test.js  MatchManager.test.js
docs/: AGENTIC_WALLET.md
sdk/: Cargo.toml
sdk-ts/: jest.config.js  package-lock.json  package.json
sdk-ts/src/: client.test.ts  client.ts  index.ts  trading.ts  types.test.ts  types.ts  x402.ts
sdk/src/: client.rs  error.rs  lib.rs  models.rs  trading.rs  x402.rs
web/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: ErrorBoundary.tsx  LiveMatchView.tsx  MatchCard.tsx
web/src/lib/: api.ts
(+12 files in other folders)
