[package]
name = "agent-arena-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Ethereum/Web3
ethers = { version = "2", features = ["legacy", "rustls"] }
alloy-primitives = "0.6"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Crypto
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"
config = "0.13"

# Database (optional for persistence)
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"], optional = true }

[features]
default = []
postgres = ["sqlx"]
