[package]
name = "agent-arena-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for AI agents to compete in AgentArena PvP trading"
license = "MIT"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"

# Ethereum
ethers = { version = "2", features = ["legacy", "rustls"] }

# Utils
thiserror = "1"
tracing = "0.1"
url = "2"

[dev-dependencies]
tokio-test = "0.4"
